--- a/hima/experiments/temporal_pooling/configs/stp.yaml
+++ b/hima/experiments/temporal_pooling/configs/stp.yaml
@@ -1,5 +1,5 @@
 _type_: stp.synthetic_sequences
-project: stp.sp_neurogenesis
+project: stp.test_trackers
 log: True    # wandb logging, use 'dry' for dummy do-nothing logging to test metrics collection
 
 seed: 42
@@ -33,9 +33,9 @@ model:
       tracker: trackers.sdr
       stream: input.sdr
       on:
-        sequence_started: sequence_id
+        sequence_started: epoch
         sdr_updated: input.sdr
-        sequence_finished: sequence_finished
+        sequence_finished: epoch_finished
 
 trackers:
   sdr:
@@ -43,18 +43,17 @@ trackers:
     sds: ???
 
 track_streams:
-  input.sdr:
-    - sdr
-    - cross.online.el
+#  input.sdr:
+#    - cross.online.el
   sp0.output.sdr:
     - sdr
-    - cross.online.el
+#    - cross.online.el
   sp1.output.sdr:
     - sdr
-    - cross.online.el
+#    - cross.online.el
   tm1.correctly_predicted_cells.sdr:
     - sdr
-    - cross.online.el
+#    - cross.online.el
 
 diff_stats:
   online_el:
