--- a/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
+++ b/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
@@ -1,15 +1,20 @@
 cells_per_column: 10
 n_vars_per_factor: 1
 factor_activation_threshold: 1  # number of active variables in a receptive field to active factor
-factors_per_var: 10
+factors_per_var: 100
 initial_factor_value: 0
-initial_alpha_value: 10
 beta: 0  # importance of active vars for receptive field
 lr: 1.0
 gamma: 0.1
 punishment: 0.1
+
+# off state boosting
+initial_alpha_value: 0
+lr_off: 0.1
+punishment_off: 0.001
+
 cell_activation_threshold: 0.0001
 max_segments_per_cell: 10
-max_segments_for_off_state: 0
+max_segments_for_off_state: 100
 segment_prune_threshold: 0.0001
 allow_synapses_to_off_states: False
