dchmm: add ensemble sp encoder

--- a/hima/experiments/hmm/configs/runner/dhmm/pinball.yaml
+++ b/hima/experiments/hmm/configs/runner/dhmm/pinball.yaml
@@ -10,9 +10,11 @@ log_gif_fps: 5
 prediction_steps: 5
 actions: [[ 3.14, 5 ], [0, 3]]
 positions: [[0, -9], [0, 0]]
+# sp_ensemble | one_sp | None
+encoder: sp_ensemble
 
 experiment: pinball
-sp_conf: 'configs/sp/default.yaml'
+sp_conf: 'configs/sp/ensemble.yaml'
 hmm_conf: 'configs/dhmm/dchmm_pinball.yaml'
 env_conf: 'configs/pinball/default.yaml'
 setup: 'frog'
