--- a/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
+++ b/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
@@ -1,7 +1,6 @@
 cells_per_column: 10
 n_vars_per_factor: 1
-factor_activation_threshold: 1  # number of active variables in a receptive field to active factor
-factors_per_var: 100
+factors_per_var: 10
 initial_factor_value: 0
 beta: 0  # importance of active vars for receptive field
 lr: 1.0
@@ -13,6 +12,10 @@ use_off_states: False
 initial_alpha_value: 0
 lr_off: 0.1
 punishment_off: 0.001
+
+# new factor boosting
+factor_boost_scale: 10
+factor_boost_decay: 0.001
 
 cell_activation_threshold: 0.0001
 max_segments_per_cell: 10
