lstm: add ensemble sp encoder and update surprise metric

--- a/hima/experiments/hmm/configs/runner/lstm/pinball.yaml
+++ b/hima/experiments/hmm/configs/runner/lstm/pinball.yaml
@@ -1,24 +1,26 @@
-log: True
+log: False
 save_model: False
-project_name: 'lstm_test'
+project_name: 'ijcai_test'
 run_tag: lstm
 
-n_episodes: 201
+n_episodes: 501
 update_rate: 10
 max_steps: 15
 log_gif_fps: 5
 prediction_steps: 5
 mc_iterations: 100
+# sp_ensemble | one_sp | null
+encoder: null
 
-actions: [[ 3.14, 5 ], [0, 5], [-1.57, 2], [1.57, 2]]
-positions: [[0, -9], [0, 0], [-3, -5.3], [3, -5.3]]
-#actions: [[ 3.14, 5 ], [0, 3]]
-#positions: [[0, -9], [0, 0]]
+#actions: [[ 3.14, 5 ], [0, 5], [-1.57, 2], [1.57, 2]]
+#positions: [[0, -9], [0, 0], [-3, -5.3], [3, -5.3]]
+actions: [[ 3.14, 5 ], [0, 3]]
+positions: [[0, -9], [0, 0]]
 
 experiment: pinball
 sp_conf: 'configs/sp/default.yaml'
 hmm_conf: 'configs/lstm/pinball.yaml'
 env_conf: 'configs/pinball/default.yaml'
-setup: 'fork'
+setup: 'frog'
 
 seed: null
