--- a/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
+++ b/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
@@ -1,16 +1,16 @@
 cells_per_column: 10
-n_vars_per_factor: 1
+n_vars_per_factor: 3
 factors_per_var: 10
-initial_factor_value: 0
-lr: 1.0
-gamma: 0.1
-punishment: 0.1
+initial_factor_value: 10
+lr: 0.01
+gamma: 0
+punishment: 0.01
 
 # new factor boosting
 factor_boost_scale: 10
-factor_boost_decay: 0.001
+factor_boost_decay: 0.01
+factor_score_inverse_temp: 0.1
 
 cell_activation_threshold: 0.0001
 max_segments_per_cell: 10
 segment_prune_threshold: 0.0001
-allow_synapses_to_off_states: False
