--- a/hima/experiments/temporal_pooling/configs/stp.yaml
+++ b/hima/experiments/temporal_pooling/configs/stp.yaml
@@ -1,11 +1,12 @@
-_type_: stp.synthetic_sequences
-project: stp.test_trackers
+_type_: stp_experiment.synthetic_sequences
+project: stp.test_temporal_pooling
 log: True    # wandb logging, use 'dry' for dummy do-nothing logging to test metrics collection
 
 seed: 42
 iterate:
-  epochs: 20
-  sequences: [10, 1]
+  epochs: 40
+  resample_frequency: 4
+  sequences: [20, 1]
   elements: 20
 
 model:
@@ -19,23 +20,30 @@ model:
     - epoch_finished
     - tracking_enabled
   pipeline:
-    - input.sdr -> sp0.feedforward.sdr
-    - sp0.compute()
-#    - sp0.output.sdr -> output.sdr
-    - sp0.output.sdr -> tm1.feedforward.sdr
-    - compute TM1:
-      - tm1.predict()
-      - tm1.set_predicted_cells()
-      - tm1.activate()
-    - tm1.correctly_predicted_cells.sdr -> output.sdr
+    - input.sdr -> SE'.feedforward.sdr
+    - SE'.compute()
+#    - SE.output.sdr -> output.sdr
+    - SE'.output.sdr -> TM.feedforward.sdr
+    - compute TM:
+      - TM.predict()
+      - TM.set_predicted_cells()
+      - TM.activate()
+    - TM.correctly_predicted_cells.sdr -> output.sdr
   track:
-    - name: input.sdr
+    - name: all_input
       tracker: trackers.sdr
       stream: input.sdr
       on:
         sequence_started: epoch
         sdr_updated: input.sdr
         sequence_finished: epoch_finished
+    - name: seq_input
+      tracker: trackers.sdr
+      stream: input.sdr
+      on:
+        sequence_started: sequence_id
+        sdr_updated: input.sdr
+        sequence_finished: sequence_finished
 
 trackers:
   sdr:
@@ -45,22 +53,22 @@ trackers:
 track_streams:
 #  input.sdr:
 #    - cross.online.el
-  sp0.output.sdr:
+  SE.output.sdr:
     - sdr
 #    - cross.online.el
-  sp1.output.sdr:
+  SA.output.sdr:
     - sdr
 #    - cross.online.el
-  tm1.correctly_predicted_cells.sdr:
+  TM.correctly_predicted_cells.sdr:
     - sdr
 #    - cross.online.el
 
 diff_stats:
   online_el:
     - gen.output/epoch/sim_mx_on_el
-    - sp0.output/epoch/sim_mx_on_el
-    - sp1.output/epoch/sim_mx_on_el
-    - tm1.correctly_predicted_cells/epoch/sim_mx_on_el
+    - SE.output/epoch/sim_mx_on_el
+    - SA.output/epoch/sim_mx_on_el
+    - TM.correctly_predicted_cells/epoch/sim_mx_on_el
 
 log_schedule:
   epoch: 5
@@ -74,320 +82,125 @@ data:
     sds: [500, 10]
 
 models:
-  test_bound_attraction_feedback:
+  +STE+AA:
+    - input.sdr -> SE'.feedforward.sdr
+    - SE'.compute()
+    - TM.predict()
+    - activate + predict by AA:
+      - TM.predicted_cells.sdr -> AA.feedforward.sdr
+      - AA.set_active_columns()
+      - AA.predict()
+      - AA.set_predicted_cells()
+    - correct TM predicted cells:
+      - AA.predicted_cells.sdr -> TM.predicted_cells.sdr
+      - TM.set_predicted_cells()
+    - learn TM:
+      - SE'.output.sdr -> TM.feedforward.sdr
+      - TM.activate()
+    - learn AA:
+      - TM.active_cells.sdr -> AA.feedforward.sdr
+      - AA.activate()
+    - TM.correctly_predicted_cells.sdr -> output.sdr
+  +STE:
+    - input.sdr -> SE'.feedforward.sdr
+    - SE'.compute()
+    - SE'.output.sdr -> TM.feedforward.sdr
+    - compute TM:
+        - TM.predict()
+        - TM.set_predicted_cells()
+        - TM.activate()
+    - TM.correctly_predicted_cells.sdr -> output.sdr
+  +SE+AA:
+    - input.sdr -> SE.feedforward.sdr
+    - SE.compute()
+    - TM.predict()
+    - activate + predict by AA:
+      - TM.predicted_cells.sdr -> AA.feedforward.sdr
+      - AA.set_active_columns()
+      - AA.predict()
+      - AA.set_predicted_cells()
+    - correct TM predicted cells:
+      - AA.predicted_cells.sdr -> TM.predicted_cells.sdr
+      - TM.set_predicted_cells()
+    - learn TM:
+      - SE.output.sdr -> TM.feedforward.sdr
+      - TM.activate()
+    - learn AA:
+      - TM.active_cells.sdr -> AA.feedforward.sdr
+      - AA.activate()
+    - TM.correctly_predicted_cells.sdr -> output.sdr
+  +AA:
     api_block: ___
     pipeline:
       - ___.input -> gen.output
-      - gen.output -> tm1.feedforward
-      - tm1.predict
-      - tm1.predicted_cells -> sp1.feedforward
-#      - sp1.switch_polarity
-      - repeat: 5
-        pipeline:
-          - sp1.compute
-          - sp1.output -> feedforward
-      - sp1.output -> tm1.predicted_cells
-      - tm1.set_predicted_cells
-      - tm1.activate
-      - tm1.active_cells -> sp1.feedback
-  #    - sp1.switch_polarity
-      - sp1.compute_feedback
-      - tm1.correctly_predicted_cells -> ___.output
-  ac_unbound:
-    api_block: ___
-    pipeline:
-      - ___.input -> gen.output
-      - tm1.predict
-      # activate + predict by TM2
-      - tm1.predicted_cells -> tm2.feedforward
-      - tm2.set_active_columns
-      - tm2.predict
-      - tm2.set_predicted_cells
-      # correct TM1 predicted cells
-      - tm2.predicted_cells -> tm1.predicted_cells
-      - tm1.set_predicted_cells
+      - TM.predict
+      # activate + predict by AA
+      - TM.predicted_cells -> AA.feedforward
+      - AA.set_active_columns
+      - AA.predict
+      - AA.set_predicted_cells
+      # correct TM predicted cells
+      - AA.predicted_cells -> TM.predicted_cells
+      - TM.set_predicted_cells
       # activate feedforward
-      - gen.output -> tm1.feedforward
-      - tm1.activate
-      # learn TM2
-      - tm1.active_cells -> tm2.feedforward
-      - tm2.activate
-      - tm1.correctly_predicted_cells -> ___.output
-  unbound_attraction_enc_force:
-    api_block: ___
-    pipeline:
-      - ___.input -> gen.output
-      - gen.output -> sp0.feedforward
-      - sp0.compute
-      - tm1.predict
-      # concat with tm predictions forced const SDR
-      - tm1.predicted_cells -> concat.feedforward_1
-      - tm1.predicted_cells -> concat.feedforward_2
-      - repeat: 10
-        pipeline:
-          - concat.compute
-          - concat.output -> sp1.feedforward
-          - sp1.compute
-          # only the 2nd part of concat vector is changed, the 1st part is kept unchanged
-          - sp1.output -> concat.feedforward_2
-#      - tm2.reset
-      # activate + predict by TM2
-      - concat.feedforward_2 -> tm2.feedforward
-      - tm2.set_active_columns
-      - tm2.predict
-      - tm2.set_predicted_cells
-      # correct TM1 predicted cells
-      - tm2.predicted_cells -> tm1.predicted_cells
-      - tm1.set_predicted_cells
-      # activate feedforward
-      - sp0.output -> tm1.feedforward
-      - tm1.activate
-      # learn TM2
-      - tm1.active_cells -> tm2.feedforward
-      - tm2.activate
-      - tm1.correctly_predicted_cells -> ___.output
-  unbound_attraction_enc:
-    api_block: ___
-    pipeline:
-      - ___.input -> gen.output
-      - gen.output -> sp0.feedforward
-      - sp0.compute
-      - tm1.predict
-      - tm1.predicted_cells -> sp1.feedforward
-      - repeat: 10
-        pipeline:
-          - sp1.compute
-          - sp1.output -> feedforward
-      # activate + predict by TM2
-      - sp1.feedforward -> tm2.feedforward
-      - tm2.set_active_columns
-      - tm2.predict
-      - tm2.set_predicted_cells
-      # correct TM1 predicted cells
-      - tm2.predicted_cells -> tm1.predicted_cells
-      - tm1.set_predicted_cells
-      # activate feedforward
-      - sp0.output -> tm1.feedforward
-      - tm1.activate
-      # learn TM2
-      - tm1.active_cells -> tm2.feedforward
-      - tm2.activate
-      - tm1.correctly_predicted_cells -> ___.output
-  unbound_attraction_force:
-    api_block: ___
-    pipeline:
-      - ___.input -> gen.output
-      - tm1.predict
-      # concat with tm predictions forced const SDR
-      - tm1.predicted_cells -> concat.feedforward_1
-      - tm1.predicted_cells -> concat.feedforward_2
-      - repeat: 10
-        pipeline:
-          - concat.compute
-          - concat.output -> sp1.feedforward
-          - sp1.compute
-          # only the 2nd part of concat vector is changed, the 1st part is kept unchanged
-          - sp1.output -> concat.feedforward_2
-#      - tm2.reset
-      # activate + predict by TM2
-      - concat.feedforward_2 -> tm2.feedforward
-      - tm2.set_active_columns
-      - tm2.predict
-      - tm2.set_predicted_cells
-      # correct TM1 predicted cells
-      - tm2.predicted_cells -> tm1.predicted_cells
-      - tm1.set_predicted_cells
-      # activate feedforward
-      - gen.output -> tm1.feedforward
-      - tm1.activate
-      # learn TM2
-      - tm1.active_cells -> tm2.feedforward
-      - tm2.activate
-      - tm1.correctly_predicted_cells -> ___.output
-  unbound_attraction:
-    api_block: ___
-    pipeline:
-      - ___.input -> gen.output
-      - tm1.predict
-      - tm1.predicted_cells -> sp1.feedforward
-      - repeat: 1
-        pipeline:
-          - sp1.compute
-          - sp1.output -> feedforward
-      # activate + predict by TM2
-      - sp1.feedforward -> tm2.feedforward
-      - tm2.set_active_columns
-      - tm2.predict
-      - tm2.set_predicted_cells
-      # correct TM1 predicted cells
-      - tm2.predicted_cells -> tm1.predicted_cells
-      - tm1.set_predicted_cells
-      # activate feedforward
-      - gen.output -> tm1.feedforward
-      - tm1.activate
-      # learn TM2
-      - tm1.active_cells -> tm2.feedforward
-      - tm2.activate
-      - tm1.correctly_predicted_cells -> ___.output
-  unbound_enc:
-    api_block: ___
-    pipeline:
-      - ___.input -> gen.output
-      - gen.output -> sp0.feedforward
-      - sp0.compute
-      - tm1.predict
-      # activate + predict by TM2
-      - tm1.predicted_cells -> tm2.feedforward
-      - tm2.set_active_columns
-      - tm2.predict
-      - tm2.set_predicted_cells
-      # correct TM1 predicted cells
-      - tm2.predicted_cells -> tm1.predicted_cells
-      - tm1.set_predicted_cells
-      # activate feedforward
-      - sp0.output -> tm1.feedforward
-      - tm1.activate
-      # learn TM2
-      - tm1.active_cells -> tm2.feedforward
-      - tm2.activate
-      - tm1.correctly_predicted_cells -> ___.output
-  unbound:
-    api_block: ___
-    pipeline:
-      - ___.input -> gen.output
-      - tm1.predict
-      # activate + predict by TM2
-      - tm1.predicted_cells -> tm2.feedforward
-      - tm2.set_active_columns
-      - tm2.predict
-      - tm2.set_predicted_cells
-      # correct TM1 predicted cells
-      - tm2.predicted_cells -> tm1.predicted_cells
-      - tm1.set_predicted_cells
-      # activate feedforward
-      - gen.output -> tm1.feedforward
-      - tm1.activate
-      # learn TM2
-      - tm1.active_cells -> tm2.feedforward
-      - tm2.activate
-      - tm1.correctly_predicted_cells -> ___.output
-  bound_attraction_force_feedback:
-    api_block: ___
-    pipeline:
-      - ___.input -> gen.output
-      - gen.output -> tm1.feedforward
-      - tm1.predict
-      # concat with tm predictions forced const SDR
-      - tm1.predicted_cells -> concat.feedforward_1
-      - tm1.predicted_cells -> concat.feedforward_2
-#      - sp1.switch_polarity
-      - repeat: 10
-        pipeline:
-          - concat.compute
-          - concat.output -> sp1.feedforward
-          - sp1.compute
-          # only the 2nd part of concat vector is changed, the 1st part is kept unchanged
-          - sp1.output -> concat.feedforward_2
-      - concat.feedforward_2 -> tm1.predicted_cells
-      - tm1.set_predicted_cells
-      - tm1.activate
-      - tm1.active_cells -> sp1.feedback
-#      - sp1.switch_polarity
-      - sp1.compute_feedback
-      - tm1.correctly_predicted_cells -> ___.output
-  bound_attraction_feedback:
-    api_block: ___
-    pipeline:
-      - ___.input -> gen.output
-      - gen.output -> tm1.feedforward
-      - tm1.predict
-      - tm1.predicted_cells -> sp1.feedforward
-#      - sp1.switch_polarity
-      - repeat: 10
-        pipeline:
-          - sp1.compute
-          - sp1.output -> feedforward
-      - sp1.output -> tm1.predicted_cells
-      - tm1.set_predicted_cells
-      - tm1.activate
-      - tm1.active_cells -> sp1.feedback
-  #    - sp1.switch_polarity
-      - sp1.compute_feedback
-      - tm1.correctly_predicted_cells -> ___.output
-  bound_attraction_force:
-    api_block: ___
-    pipeline:
-      - ___.input -> gen.output
-      - gen.output -> tm1.feedforward
-      - tm1.predict
-      # concat with tm predictions forced const SDR
-      - tm1.predicted_cells -> concat.feedforward_1
-      - tm1.predicted_cells -> concat.feedforward_2
-      - repeat: 10
-        pipeline:
-          - concat.compute
-          - concat.output -> sp1.feedforward
-          - sp1.compute
-          # only the 2nd part of concat vector is changed, the 1st part is kept unchanged
-          - sp1.output -> concat.feedforward_2
-      - sp1.output -> tm1.predicted_cells
-      - tm1.set_predicted_cells
-      - tm1.activate
-      - tm1.correctly_predicted_cells -> ___.output
-  bound_attraction:
-    api_block: ___
-    pipeline:
-      - ___.input -> gen.output
-      - gen.output -> tm1.feedforward
-      - tm1.predict
-      - tm1.predicted_cells -> sp1.feedforward
-      - repeat: 1
-        pipeline:
-          - sp1.compute
-          - sp1.output -> feedforward
-      - sp1.output -> tm1.predicted_cells
-      - tm1.set_predicted_cells
-      - tm1.activate
-      - tm1.correctly_predicted_cells -> ___.output
-  tm_enc:
-    api_block: ___
-    pipeline:
-      - ___.input -> gen.output
-      - gen.output -> sp0.feedforward
-      - sp0.compute
-      - sp0.output -> tm1.feedforward
-      - tm1.predict
-      - tm1.set_predicted_cells
-      - tm1.activate
-      - tm1.correctly_predicted_cells -> ___.output
-  tm:
-    api_block: ___
-    pipeline:
-      - ___.input -> gen.output
-      - gen.output -> tm1.feedforward
-      - tm1.predict
-      - tm1.set_predicted_cells
-      - tm1.activate
-      - tm1.correctly_predicted_cells -> ___.output
+      - gen.output -> TM.feedforward
+      - TM.activate
+      # learn AA
+      - TM.active_cells -> AA.feedforward
+      - AA.activate
+      - TM.correctly_predicted_cells -> ___.output
+  +SE:
+    - input.sdr -> SE.feedforward.sdr
+    - SE.compute()
+    - SE.output.sdr -> TM.feedforward.sdr
+    - compute TM:
+      - TM.predict()
+      - TM.set_predicted_cells()
+      - TM.activate()
+    - TM.correctly_predicted_cells.sdr -> output.sdr
+  Baseline TM:
+    - input.sdr -> TM.feedforward.sdr
+    - compute TM:
+      - TM.predict()
+      - TM.set_predicted_cells()
+      - TM.activate()
+    - TM.correctly_predicted_cells.sdr -> output.sdr
 
 blocks:
   concat:
     _type_: block.concatenator
-  sp0:
+  SE:
     _type_: block.sp
     output_sds: [500, 10]
     sp:
       _base_: $_base.spatial_pooler.default
       initial_rf_to_input_ratio: 8.0
-      max_rf_to_input_ratio: 1.25
+      max_rf_to_input_ratio: 1.5
       learning_rate: 0.02
       global_inhibition_strength: 0.2
-      newborn_pruning_cycle: 1.0
+      newborn_pruning_cycle: 2.0
       newborn_pruning_stages: 4
-      prune_grow_cycle: 4.0
+      prune_grow_cycle: 8.0
       adapt_to_ff_sparsity: False
       boosting_k: 0.5
-  sp1:
+  SE':
+    _type_: block.sp
+    output_sds: [500, 10]
+    sp:
+      _type_: stp.base
+      _base_: $_base.spatial_pooler.default
+      pooling_window: 2
+      rand_decay_max_ratio: 2.0
+      initial_rf_to_input_ratio: 8.0
+      max_rf_to_input_ratio: 1.5
+      learning_rate: 0.02
+      global_inhibition_strength: 0.2
+      newborn_pruning_cycle: 2.0
+      newborn_pruning_stages: 4
+      prune_grow_cycle: 8.0
+      adapt_to_ff_sparsity: False
+      boosting_k: 0.5
+  SA:
     _type_: block.sp
     output_sds: ??? #[500, 10]
     sp:
@@ -401,7 +214,7 @@ blocks:
       prune_grow_cycle: 4.0
       adapt_to_ff_sparsity: False
       boosting_k: 0.5
-  tm1:
+  TM:
     _type_: block.tm.general_feedback
     active_cells_sds: ???
     predicted_cells_sds: ???
@@ -412,9 +225,9 @@ blocks:
       learning_threshold_basal: .7
       activation_threshold_apical: 1
       learning_threshold_apical: 1
-      max_synapses_per_segment_basal: -1
-      max_segments_per_cell_basal: 32
-  tm2:
+      max_synapses_per_segment_basal: 2.1
+      max_segments_per_cell_basal: 16
+  AA:
     _type_: block.tm.general_feedback
     active_cells_sds: ???
     predicted_cells_sds: ???
@@ -425,8 +238,8 @@ blocks:
       learning_threshold_basal: .6
       activation_threshold_apical: 1
       learning_threshold_apical: 1
-      max_synapses_per_segment_basal: -1
-      max_segments_per_cell_basal: 128
+      max_synapses_per_segment_basal: 4.4
+      max_segments_per_cell_basal: 32
 
 stats_and_metrics:
   mae_normalization: no
