--- a/hima/experiments/temporal_pooling/configs/stp.yaml
+++ b/hima/experiments/temporal_pooling/configs/stp.yaml
@@ -134,20 +134,20 @@ models:
     pipeline:
       - ___.input -> gen.output
       - TM.predict
-      # activate + predict by AA
-      - TM.predicted_cells -> AA.feedforward
-      - AA.set_active_columns
-      - AA.predict
-      - AA.set_predicted_cells
-      # correct TM predicted cells
-      - AA.predicted_cells -> TM.predicted_cells
-      - TM.set_predicted_cells
-      # activate feedforward
-      - gen.output -> TM.feedforward
-      - TM.activate
-      # learn AA
-      - TM.active_cells -> AA.feedforward
-      - AA.activate
+      - activate + predict by AA:
+        - TM.predicted_cells -> AA.feedforward
+        - AA.set_active_columns
+        - AA.predict
+        - AA.set_predicted_cells
+      - correct TM predicted cells:
+        - AA.predicted_cells -> TM.predicted_cells
+        - TM.set_predicted_cells
+      - learn TM:
+        - gen.output -> TM.feedforward
+        - TM.activate
+      - learn AA:
+        - TM.active_cells -> AA.feedforward
+        - AA.activate
       - TM.correctly_predicted_cells -> ___.output
   +SE:
     - input.sdr -> SE.feedforward.sdr
