--- a/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
+++ b/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
@@ -9,8 +9,11 @@ punishment: 0.001
 # new factor boosting
 factor_boost_scale: 1
 factor_boost_decay: 0.001
-factor_score_inverse_temp: 10.0
-prediction_inverse_temp: 8.0
+# new segment boosting
+segment_boost_scale: 5
+segment_boost_decay: 0.0001
+
+prediction_inverse_temp: 1.0
 
 cell_activation_threshold: 0.0001
 max_segments_per_cell: 10
