--- a/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
+++ b/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
@@ -1,17 +1,13 @@
 cells_per_column: 10
-n_vars_per_factor: 3
+n_vars_per_factor: 1
 factors_per_var: 10
-initial_factor_value: 0.001
-lr: 0.001
-gamma: 0
-punishment: 0.001
+initial_factor_value: 0.0
 
 # new factor boosting
-factor_boost_scale: 1
+factor_boost_scale: 10
 factor_boost_decay: 0.001
-# new segment boosting
-segment_boost_scale: 5
-segment_boost_decay: 0.0001
+# predicted cell boosting
+predicted_cell_boost_factor: 1000000
 
 prediction_inverse_temp: 1.0
 
