--- a/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
+++ b/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
@@ -1,8 +1,9 @@
 cells_per_column: 10
-n_vars_per_factor: 3
+n_vars_per_factor: 2
+external_vars_boost: -10  # set it non-zero to shift probability of choosing external var for factor
 factors_per_var: 10
 initial_factor_value: 0.0
-lr: 10.0
+lr: 1.0
 
 # new factor boosting
 factor_boost_scale: 10
