--- a/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
+++ b/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
@@ -1,10 +1,10 @@
 cells_per_column: 10
 n_vars_per_factor: 3
-external_vars_boost: 10  # set it non-zero to shift probability of choosing external var for factor
+external_vars_boost: 0  # set it non-zero to shift probability of choosing external var for factor
 factors_per_var: 1
 
 initial_factor_value: 0.0
-lr: 0.005
+lr: 0.05
 
 # new factor boosting
 factor_boost_scale: 10
@@ -15,5 +15,6 @@ predicted_cell_boost_factor: 1.0
 prediction_inverse_temp: 1.0
 
 cell_activation_threshold: 0.0001
-max_segments_per_cell: 10
-segment_prune_threshold: 0.0001
+# max_segments_per_cell: 10
+max_segments: 300
+max_segments_margin: 700
