--- a/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
+++ b/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
@@ -5,6 +5,7 @@ factors_per_var: 1
 
 initial_factor_value: 0.0
 lr: 0.05
+alpha: 0.001
 
 # new factor boosting
 factor_boost_scale: 10
@@ -16,5 +17,6 @@ prediction_inverse_temp: 1.0
 
 cell_activation_threshold: 0.0001
 # max_segments_per_cell: 10
-max_segments: 300
-max_segments_margin: 700
+max_segments: 1000
+developmental_period: 2000
+fraction_of_segments_to_prune: 0.3
