--- a/hima/experiments/hmm/configs/runner/lstm/pinball.yaml
+++ b/hima/experiments/hmm/configs/runner/lstm/pinball.yaml
@@ -1,7 +1,7 @@
-log: False
+log: True
 save_model: False
-project_name: 'ijcai_test'
-run_tag: lstm
+project_name: 'awesome_project'
+run_tag: awesome_model
 
 n_episodes: 501
 update_rate: 10
@@ -9,8 +9,10 @@ max_steps: 15
 log_gif_fps: 5
 prediction_steps: 5
 mc_iterations: 100
+normalize_surprise: False
+
 # sp_ensemble | one_sp | null
-encoder: null
+encoder: one_sp
 
 #actions: [[ 3.14, 5 ], [0, 5], [-1.57, 2], [1.57, 2]]
 #positions: [[0, -9], [0, 0], [-3, -5.3], [3, -5.3]]
