--- a/hima/experiments/temporal_pooling/configs/dvc.yaml
+++ b/hima/experiments/temporal_pooling/configs/dvc.yaml
@@ -4,8 +4,8 @@ log: True    # wandb logging, use 'dry' for dummy do-nothing logging to test met
 
 seed: 42
 iterate:
-  epochs: 100
-  resample_frequency: 5
+  epochs: 20
+  resample_frequency: 1
   sequences: [20, 1]
   elements: 200
 
@@ -73,7 +73,13 @@ log_schedule:
   epoch: 5
   repeat: 5
 
-data: datas.synthetic_sequences
+#data: datas.synthetic_sequences
+data:
+  _type_: ds.dvc_sequences
+  filepath: /Users/kuderov/data/outdoors_walking/sdrs.pkl
+  n_sequences: ???
+  sequence_length: ???
+
 
 datas:
   synthetic_sequences:
@@ -170,7 +176,8 @@ blocks:
     _type_: block.concatenator
   SE:
     _type_: block.sp
-    output_sds: [500, 10]
+#    output_sds: [500, 10]
+    output_sds: [2000, 32]
     sp:
       _base_: $_base.spatial_pooler.default
       initial_rf_to_input_ratio: 8.0
