--- a/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
+++ b/hima/experiments/hmm/configs/dhmm/dchmm_pinball.yaml
@@ -1,19 +1,21 @@
 cells_per_column: 10
 n_vars_per_factor: 3
-external_vars_boost: 0  # set it non-zero to shift probability of choosing external var for factor
 factors_per_var: 10
 
+# boosting
+external_vars_boost: 0  # set it non-zero to shift probability of choosing external var for factor
+unused_vars_boost: 0
+
+# learning
 initial_factor_value: 0.0
 lr: 0.05
-alpha: 0.001
-
-# predicted cell boosting (multiplicative)
-predicted_cell_boost_factor: 1.0
+segment_activity_lr: 0.001
+var_score_lr: 0.001
 
 prediction_inverse_temp: 1.0
 
 cell_activation_threshold: 0.0001
 # max_segments_per_cell: 10
 max_segments: 1000
-developmental_period: 2000
+developmental_period: 3000
 fraction_of_segments_to_prune: 0.3
