--- a/hima/experiments/temporal_pooling/configs/dvc.yaml
+++ b/hima/experiments/temporal_pooling/configs/dvc.yaml
@@ -73,13 +73,7 @@ log_schedule:
   epoch: 5
   repeat: 5
 
-#data: datas.synthetic_sequences
-data:
-  _type_: ds.dvc_sequences
-  filepath: /Users/kuderov/data/outdoors_walking/sdrs.pkl
-  n_sequences: ???
-  sequence_length: ???
-
+data: datas.dvc_sequences
 
 datas:
   synthetic_sequences:
@@ -88,6 +82,13 @@ datas:
     encoder:
       _base_: $_base.encoder.random.fixed_sds
       sds: [ 500, 10 ]
+  dvc_sequences:
+    _type_: ds.dvc_sequences
+    filepath: /Users/kuderov/data/outdoors_walking/sdrs.pkl
+    n_sequences: ???
+    sequence_length: ???
+    seed: ???
+    sequential: True
 
 models:
   +STE+AA:
@@ -179,12 +180,12 @@ blocks:
     output_sds: [2500, 32]
     sp:
       _base_: $_base.spatial_pooler.default
-      initial_rf_to_input_ratio: 4.0
-      max_rf_to_input_ratio: .2
-      learning_rate: 0.01
+      initial_rf_to_input_ratio: 2.5
+      max_rf_to_input_ratio: .25
+      learning_rate: 0.001
       global_inhibition_strength: 0.2
-      newborn_pruning_cycle: 2.0
-      newborn_pruning_stages: 8
+      newborn_pruning_cycle: 1.0
+      newborn_pruning_stages: 10
       prune_grow_cycle: 10.0
       adapt_to_ff_sparsity: True
       boosting_k: 0.5
@@ -196,12 +197,12 @@ blocks:
       _base_: $_base.spatial_pooler.default
       max_pooling_window: 4
       reset_potential_on_activation: True
-      initial_rf_to_input_ratio: 4.0
-      max_rf_to_input_ratio: .2
-      learning_rate: 0.01
+      initial_rf_to_input_ratio: 2.5
+      max_rf_to_input_ratio: .25
+      learning_rate: 0.001
       global_inhibition_strength: 0.2
-      newborn_pruning_cycle: 2.0
-      newborn_pruning_stages: 8
+      newborn_pruning_cycle: 1.0
+      newborn_pruning_stages: 10
       prune_grow_cycle: 10.0
       adapt_to_ff_sparsity: True
       boosting_k: 0.5
@@ -225,13 +226,13 @@ blocks:
     predicted_cells_sds: ???
     tm:
       seed: ???
-      cells_per_column: 12
+      cells_per_column: 8
       activation_threshold_basal: .9
       learning_threshold_basal: .7
       activation_threshold_apical: 1
       learning_threshold_apical: 1
       max_synapses_per_segment_basal: 2.1
-      max_segments_per_cell_basal: 8
+      max_segments_per_cell_basal: 16
   AA:
     _type_: block.tm.general_feedback
     active_cells_sds: ???
@@ -244,7 +245,7 @@ blocks:
       activation_threshold_apical: 1
       learning_threshold_apical: 1
       max_synapses_per_segment_basal: 4.4
-      max_segments_per_cell_basal: 16
+      max_segments_per_cell_basal: 32
 
 stats_and_metrics:
   mae_normalization: no
