--- a/hima/experiments/temporal_pooling/configs/runner/sp_attractor.yaml
+++ b/hima/experiments/temporal_pooling/configs/runner/sp_attractor.yaml
@@ -2,9 +2,13 @@ log: True
 project_name: 'sp_attractor'
 run_tag: null
 
-n_episodes: 201
-update_rate: 10
+n_episodes: 1000
+update_rate: 50
 max_steps: 100
+
+# testing
+attractor_steps: 20
+n_trajectories: 500
 
 encoder_conf: 'configs/sp/encoder.yaml'
 attractor_conf: 'configs/sp/attractor.yaml'
