--- a/hima/experiments/temporal_pooling/configs/text.yaml
+++ b/hima/experiments/temporal_pooling/configs/text.yaml
@@ -5,7 +5,7 @@ log: True    # wandb logging, use 'dry' for dummy do-nothing logging to test met
 seed: 42
 iterate:
   epochs: 100
-#  resample_frequency: 5
+  resample_frequency: 5
   sequences: 1
   elements: 200
 
@@ -93,12 +93,13 @@ datas:
     _type_: ds.text_sequences
     global_config: ???
     seed: ???
-    filepath: /Users/kuderov/data/text/test_stp.py
+    filepath: /Users/kuderov/data/text/wiki_ai.txt
     n_sequences: ???
     sequence_length: ???
     encoder:
       _base_: $_base.encoder.random.fixed_sds
       sds: [ 500, 10 ]
+    sequential: True
 
 
 models:
