--- a/hima/experiments/hmm/configs/runner/layer/pinball.yaml
+++ b/hima/experiments/hmm/configs/runner/layer/pinball.yaml
@@ -11,6 +11,8 @@ prediction_steps: 5
 start_actions: [[ 3.14, 5 ], [0, 3]]
 start_positions: [[0, -9], [0, 0]]
 
+internal_dependence_1step: False
+
 # simple policy consisting of one action
 #actions: [[1.57, 5], [-1.57, 5]]
 #action_delay: 5  # frames to wait before acting
